Modified vectorizer for better performance

--- a/PartTwo.ipynb
+++ b/PartTwo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "id": "11ad6c29",
    "metadata": {},
    "outputs": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "id": "531f9ad5",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "id": "a33040f6",
    "metadata": {},
    "outputs": [],
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "id": "9f63a418",
    "metadata": {},
    "outputs": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "id": "0082716d",
    "metadata": {},
    "outputs": [
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "id": "188a7768",
    "metadata": {},
    "outputs": [],
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "id": "a1872341",
    "metadata": {},
    "outputs": [
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 17,
    "id": "17e10f7f",
    "metadata": {},
    "outputs": [],
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 18,
    "id": "5a8ea34a",
    "metadata": {},
    "outputs": [
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 19,
    "id": "6c8a749a",
    "metadata": {},
    "outputs": [
@@ -417,38 +417,38 @@
      "output_type": "stream",
      "text": [
       "Random Forest classifier\n",
-      "f1 score: 0.3059044976607264\n",
+      "f1 score: 0.33359322735902347\n",
       "Classification report:\n",
       "                         precision    recall  f1-score   support\n",
       "\n",
-      "           Conservative       0.66      0.99      0.79       964\n",
-      "                 Labour       0.80      0.27      0.40       463\n",
+      "           Conservative       0.68      1.00      0.81       964\n",
+      "                 Labour       0.77      0.34      0.47       463\n",
       "       Liberal Democrat       0.00      0.00      0.00        54\n",
-      "Scottish National Party       1.00      0.01      0.03       136\n",
+      "Scottish National Party       1.00      0.03      0.06       136\n",
       "\n",
-      "               accuracy                           0.67      1617\n",
-      "              macro avg       0.61      0.32      0.31      1617\n",
-      "           weighted avg       0.70      0.67      0.59      1617\n",
+      "               accuracy                           0.69      1617\n",
+      "              macro avg       0.61      0.34      0.33      1617\n",
+      "           weighted avg       0.71      0.69      0.62      1617\n",
       "\n",
       "SVM linear classifier\n",
-      "f1 score: 0.6724297664903492\n",
+      "f1 score: 0.6617756542587051\n",
       "Classification report:\n",
       "                         precision    recall  f1-score   support\n",
       "\n",
-      "           Conservative       0.85      0.90      0.88       964\n",
-      "                 Labour       0.73      0.71      0.72       463\n",
-      "       Liberal Democrat       0.64      0.33      0.44        54\n",
-      "Scottish National Party       0.71      0.60      0.65       136\n",
+      "           Conservative       0.86      0.92      0.89       964\n",
+      "                 Labour       0.74      0.74      0.74       463\n",
+      "       Liberal Democrat       0.65      0.24      0.35        54\n",
+      "Scottish National Party       0.79      0.58      0.67       136\n",
       "\n",
-      "               accuracy                           0.80      1617\n",
-      "              macro avg       0.73      0.64      0.67      1617\n",
-      "           weighted avg       0.80      0.80      0.80      1617\n",
+      "               accuracy                           0.82      1617\n",
+      "              macro avg       0.76      0.62      0.66      1617\n",
+      "           weighted avg       0.81      0.82      0.81      1617\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "vectorizer = CountVectorizer(tokenizer=lambda x: x.split(), preprocessor=None, lowercase=False)\n",
+    "vectorizer = CountVectorizer(tokenizer=lambda x: x.split(), preprocessor=None, lowercase=False, ngram_range=(1,2), min_df=3)\n",
     "features = vectorizer.fit_transform(df['speech'])\n",
     "labels = df['party']\n",
     "\n",
@@ -462,12 +462,14 @@
    "id": "7677239a",
    "metadata": {},
    "source": [
-    "SVM improved performance with CountVectorizer. f1 score: 0.6724297664903492. Lower for RF."
+    "SVM improved performance with CountVectorizer. f1 score: 0.6724297664903492. Lower for RF.\n",
+    "Trigrams, very computational expensive.\n",
+    "ngram_range=(1,2), min_df=3 more time, not improvement."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 20,
    "id": "43a23e0b",
    "metadata": {},
    "outputs": [
@@ -480,37 +482,20 @@
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Random Forest classifier\n",
-      "f1 score: 0.49894852665494777\n",
-      "Classification report:\n",
-      "                         precision    recall  f1-score   support\n",
-      "\n",
-      "           Conservative       0.74      0.97      0.84       964\n",
-      "                 Labour       0.77      0.50      0.60       463\n",
-      "       Liberal Democrat       0.00      0.00      0.00        54\n",
-      "Scottish National Party       0.90      0.40      0.55       136\n",
-      "\n",
-      "               accuracy                           0.75      1617\n",
-      "              macro avg       0.60      0.47      0.50      1617\n",
-      "           weighted avg       0.74      0.75      0.72      1617\n",
-      "\n",
-      "SVM linear classifier\n",
-      "f1 score: 0.5720440957867078\n",
-      "Classification report:\n",
-      "                         precision    recall  f1-score   support\n",
-      "\n",
-      "           Conservative       0.83      0.92      0.87       964\n",
-      "                 Labour       0.72      0.72      0.72       463\n",
-      "       Liberal Democrat       1.00      0.04      0.07        54\n",
-      "Scottish National Party       0.77      0.52      0.62       136\n",
-      "\n",
-      "               accuracy                           0.80      1617\n",
-      "              macro avg       0.83      0.55      0.57      1617\n",
-      "           weighted avg       0.80      0.80      0.78      1617\n",
-      "\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[20]\u001b[39m\u001b[32m, line 9\u001b[39m\n\u001b[32m      5\u001b[39m labels = df[\u001b[33m'\u001b[39m\u001b[33mparty\u001b[39m\u001b[33m'\u001b[39m]\n\u001b[32m      7\u001b[39m features_train, features_test, labels_train, labels_test = train_test_split(features, labels, test_size= \u001b[32m0.2\u001b[39m, random_state= \u001b[32m26\u001b[39m, stratify= labels)\n\u001b[32m----> \u001b[39m\u001b[32m9\u001b[39m \u001b[43mrandom_forest_and_linearsvm_performance\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfeatures_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfeatures_test\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlabels_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlabels_test\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[13]\u001b[39m\u001b[32m, line 14\u001b[39m, in \u001b[36mrandom_forest_and_linearsvm_performance\u001b[39m\u001b[34m(x_train, x_test, y_train, y_test)\u001b[39m\n\u001b[32m     11\u001b[39m random_forest_report = classification_report(labels_test, rf_predict, zero_division=\u001b[32m0\u001b[39m)\n\u001b[32m     13\u001b[39m svm = SVC(kernel=\u001b[33m\"\u001b[39m\u001b[33mlinear\u001b[39m\u001b[33m\"\u001b[39m, random_state=\u001b[32m26\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m14\u001b[39m \u001b[43msvm\u001b[49m\u001b[43m.\u001b[49m\u001b[43mfit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfeatures_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlabels_train\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     15\u001b[39m svm_predict = svm.predict(features_test)\n\u001b[32m     17\u001b[39m svm_f1 = f1_score(labels_test, svm_predict, average=\u001b[33m\"\u001b[39m\u001b[33mmacro\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/.pyenv/versions/3.12.3/lib/python3.12/site-packages/sklearn/base.py:1389\u001b[39m, in \u001b[36m_fit_context.<locals>.decorator.<locals>.wrapper\u001b[39m\u001b[34m(estimator, *args, **kwargs)\u001b[39m\n\u001b[32m   1382\u001b[39m     estimator._validate_params()\n\u001b[32m   1384\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m config_context(\n\u001b[32m   1385\u001b[39m     skip_parameter_validation=(\n\u001b[32m   1386\u001b[39m         prefer_skip_nested_validation \u001b[38;5;129;01mor\u001b[39;00m global_skip_validation\n\u001b[32m   1387\u001b[39m     )\n\u001b[32m   1388\u001b[39m ):\n\u001b[32m-> \u001b[39m\u001b[32m1389\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfit_method\u001b[49m\u001b[43m(\u001b[49m\u001b[43mestimator\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/.pyenv/versions/3.12.3/lib/python3.12/site-packages/sklearn/svm/_base.py:258\u001b[39m, in \u001b[36mBaseLibSVM.fit\u001b[39m\u001b[34m(self, X, y, sample_weight)\u001b[39m\n\u001b[32m    255\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33m[LibSVM]\u001b[39m\u001b[33m\"\u001b[39m, end=\u001b[33m\"\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m    257\u001b[39m seed = rnd.randint(np.iinfo(\u001b[33m\"\u001b[39m\u001b[33mi\u001b[39m\u001b[33m\"\u001b[39m).max)\n\u001b[32m--> \u001b[39m\u001b[32m258\u001b[39m \u001b[43mfit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msample_weight\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msolver_type\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkernel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrandom_seed\u001b[49m\u001b[43m=\u001b[49m\u001b[43mseed\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    259\u001b[39m \u001b[38;5;66;03m# see comment on the other call to np.iinfo in this file\u001b[39;00m\n\u001b[32m    261\u001b[39m \u001b[38;5;28mself\u001b[39m.shape_fit_ = X.shape \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(X, \u001b[33m\"\u001b[39m\u001b[33mshape\u001b[39m\u001b[33m\"\u001b[39m) \u001b[38;5;28;01melse\u001b[39;00m (n_samples,)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/.pyenv/versions/3.12.3/lib/python3.12/site-packages/sklearn/svm/_base.py:377\u001b[39m, in \u001b[36mBaseLibSVM._sparse_fit\u001b[39m\u001b[34m(self, X, y, sample_weight, solver_type, kernel, random_seed)\u001b[39m\n\u001b[32m    363\u001b[39m kernel_type = \u001b[38;5;28mself\u001b[39m._sparse_kernels.index(kernel)\n\u001b[32m    365\u001b[39m libsvm_sparse.set_verbosity_wrap(\u001b[38;5;28mself\u001b[39m.verbose)\n\u001b[32m    367\u001b[39m (\n\u001b[32m    368\u001b[39m     \u001b[38;5;28mself\u001b[39m.support_,\n\u001b[32m    369\u001b[39m     \u001b[38;5;28mself\u001b[39m.support_vectors_,\n\u001b[32m    370\u001b[39m     dual_coef_data,\n\u001b[32m    371\u001b[39m     \u001b[38;5;28mself\u001b[39m.intercept_,\n\u001b[32m    372\u001b[39m     \u001b[38;5;28mself\u001b[39m._n_support,\n\u001b[32m    373\u001b[39m     \u001b[38;5;28mself\u001b[39m._probA,\n\u001b[32m    374\u001b[39m     \u001b[38;5;28mself\u001b[39m._probB,\n\u001b[32m    375\u001b[39m     \u001b[38;5;28mself\u001b[39m.fit_status_,\n\u001b[32m    376\u001b[39m     \u001b[38;5;28mself\u001b[39m._num_iter,\n\u001b[32m--> \u001b[39m\u001b[32m377\u001b[39m ) = \u001b[43mlibsvm_sparse\u001b[49m\u001b[43m.\u001b[49m\u001b[43mlibsvm_sparse_train\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    378\u001b[39m \u001b[43m    \u001b[49m\u001b[43mX\u001b[49m\u001b[43m.\u001b[49m\u001b[43mshape\u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    379\u001b[39m \u001b[43m    \u001b[49m\u001b[43mX\u001b[49m\u001b[43m.\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    380\u001b[39m \u001b[43m    \u001b[49m\u001b[43mX\u001b[49m\u001b[43m.\u001b[49m\u001b[43mindices\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    381\u001b[39m \u001b[43m    \u001b[49m\u001b[43mX\u001b[49m\u001b[43m.\u001b[49m\u001b[43mindptr\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    382\u001b[39m \u001b[43m    \u001b[49m\u001b[43my\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    383\u001b[39m \u001b[43m    \u001b[49m\u001b[43msolver_type\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    384\u001b[39m \u001b[43m    \u001b[49m\u001b[43mkernel_type\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    385\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mdegree\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    386\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_gamma\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    387\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mcoef0\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    388\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mtol\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    389\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mC\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    390\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43mgetattr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mclass_weight_\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mempty\u001b[49m\u001b[43m(\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    391\u001b[39m \u001b[43m    \u001b[49m\u001b[43msample_weight\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    392\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mnu\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    393\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mcache_size\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    394\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mepsilon\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    395\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mshrinking\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    396\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mprobability\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    397\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mmax_iter\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    398\u001b[39m \u001b[43m    \u001b[49m\u001b[43mrandom_seed\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    399\u001b[39m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    401\u001b[39m \u001b[38;5;28mself\u001b[39m._warn_from_fit_status()\n\u001b[32m    403\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mclasses_\u001b[39m\u001b[33m\"\u001b[39m):\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m_libsvm_sparse.pyx:218\u001b[39m, in \u001b[36msklearn.svm._libsvm_sparse.libsvm_sparse_train\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/.pyenv/versions/3.12.3/lib/python3.12/site-packages/scipy/sparse/_compressed.py:27\u001b[39m, in \u001b[36m_cs_matrix.__init__\u001b[39m\u001b[34m(self, arg1, shape, dtype, copy)\u001b[39m\n\u001b[32m     22\u001b[39m \u001b[38;5;28;01mclass\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01m_cs_matrix\u001b[39;00m(_data_matrix, _minmax_mixin, IndexMixin):\n\u001b[32m     23\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m     24\u001b[39m \u001b[33;03m    base array/matrix class for compressed row- and column-oriented arrays/matrices\u001b[39;00m\n\u001b[32m     25\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m27\u001b[39m     \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, arg1, shape=\u001b[38;5;28;01mNone\u001b[39;00m, dtype=\u001b[38;5;28;01mNone\u001b[39;00m, copy=\u001b[38;5;28;01mFalse\u001b[39;00m):\n\u001b[32m     28\u001b[39m         _data_matrix.\u001b[34m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m)\n\u001b[32m     30\u001b[39m         \u001b[38;5;28;01mif\u001b[39;00m issparse(arg1):\n",
+      "\u001b[31mKeyboardInterrupt\u001b[39m: "
      ]
     }
    ],
@@ -540,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "45515b41",
    "metadata": {},
    "outputs": [],
@@ -568,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "1c1b460e",
    "metadata": {},
    "outputs": [
