Deleted vectorizer with lower performance

--- a/PartTwo.ipynb
+++ b/PartTwo.ipynb
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "6c8a749a",
    "metadata": {},
    "outputs": [
@@ -448,6 +448,8 @@
     }
    ],
    "source": [
+    "# Experiment different values ngrams and for removing rare terms like typos or very common ones that may no distinguish a party in particular.\n",
+    "\n",
     "vectorizer = CountVectorizer(tokenizer=lambda x: x.split(), preprocessor=None, lowercase=False, ngram_range=(1,2), min_df=3)\n",
     "features = vectorizer.fit_transform(df['speech'])\n",
     "labels = df['party']\n",
@@ -465,97 +467,6 @@
     "SVM improved performance with CountVectorizer. f1 score: 0.6724297664903492. Lower for RF.\n",
     "Trigrams, very computational expensive.\n",
     "ngram_range=(1,2), min_df=3 more time, not improvement."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "45515b41",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Try with up to bigrams (2 word) sequence.\n",
-    "\n",
-    "vectorizer = TfidfVectorizer(tokenizer=custom_tokenizer_nltk, stop_words='english', max_features=3000,\n",
-    "    ngram_range=(1,2))\n",
-    "\n",
-    "# features = vectorizer.fit_transform(df['speech'])\n",
-    "# labels = df['party']\n",
-    "\n",
-    "# features_train, features_test, labels_train, labels_test = train_test_split(features, labels, test_size= 0.2, random_state= 26, stratify= labels)\n",
-    "\n",
-    "# random_forest_and_linearsvm_performance(features_train, features_test, labels_train, labels_test)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e9142225",
-   "metadata": {},
-   "source": [
-    "The performance of the custom tokenizer decreses with biograms and even more with only unigrams."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1c1b460e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/jimena/.pyenv/versions/3.12.3/lib/python3.12/site-packages/sklearn/feature_extraction/text.py:517: UserWarning: The parameter 'token_pattern' will not be used since 'tokenizer' is not None'\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Random Forest classifier\n",
-      "f1 score: 0.4818605591717103\n",
-      "Classification report:\n",
-      "                         precision    recall  f1-score   support\n",
-      "\n",
-      "           Conservative       0.74      0.96      0.84       964\n",
-      "                 Labour       0.75      0.48      0.58       463\n",
-      "       Liberal Democrat       0.00      0.00      0.00        54\n",
-      "Scottish National Party       0.80      0.38      0.51       136\n",
-      "\n",
-      "               accuracy                           0.74      1617\n",
-      "              macro avg       0.57      0.45      0.48      1617\n",
-      "           weighted avg       0.72      0.74      0.71      1617\n",
-      "\n",
-      "SVM linear classifier\n",
-      "f1 score: 0.571589034626724\n",
-      "Classification report:\n",
-      "                         precision    recall  f1-score   support\n",
-      "\n",
-      "           Conservative       0.83      0.92      0.87       964\n",
-      "                 Labour       0.72      0.71      0.72       463\n",
-      "       Liberal Democrat       1.00      0.04      0.07        54\n",
-      "Scottish National Party       0.77      0.52      0.62       136\n",
-      "\n",
-      "               accuracy                           0.80      1617\n",
-      "              macro avg       0.83      0.55      0.57      1617\n",
-      "           weighted avg       0.80      0.80      0.78      1617\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Experiment different values for removing rare terms like typos or very common ones that may no distinguish a party in particular.\n",
-    "\n",
-    "vectorizer = TfidfVectorizer(tokenizer=custom_tokenizer_nltk, stop_words='english', max_features=3000,\n",
-    "    ngram_range=(1, 3), min_df=3)\n",
-    "\n",
-    "features = vectorizer.fit_transform(df['speech'])\n",
-    "labels = df['party']\n",
-    "\n",
-    "features_train, features_test, labels_train, labels_test = train_test_split(features, labels, test_size= 0.2, random_state= 26, stratify= labels)\n",
-    "\n",
-    "random_forest_and_linearsvm_performance(features_train, features_test, labels_train, labels_test) "
    ]
   },
   {
