Deleted markdown with performance results

--- a/PartTwo.ipynb
+++ b/PartTwo.ipynb
@@ -474,30 +474,7 @@
    "id": "a0bf8d04",
    "metadata": {},
    "source": [
-    "RF f1 score: 0.6890668398952485\n",
-    "SVM 0.7909362022889694\n",
-    "\n",
-    "min_df=2, max_df=1.0\n",
-    "RF f1 score: 0.6870290776987082 lower\n",
-    "0.7915507427870954 slightly better\n",
-    "min_df=2, max_df=0.8 Results \n",
-    "RF f1 score: 0.6870290776987082 same\n",
-    "SVM linear classifier\n",
-    "f1 score: 0.7915507427870954 same\n",
-    "min_df=3, max_df=1.0\n",
-    "RF 0.6778256216611293 worst\n",
-    "SVM 0.7940558943755874 better # best performance\n",
-    "min_df=3, max_df=0.8\n",
-    "RF f1 score: 0.6778256216611293 same\n",
-    "SVM 0.7940558943755874 same\n",
-    "min_df=4, max_df=0.8\n",
-    "RF f1 score: 0.6793783617299914 better\n",
-    "SVM 0.7924195085147825 worst\n",
-    "min_df=5, max_df=0.8\n",
-    "RF f1 score: 0.6731302798204378 worst\n",
-    "SVM f1 score: 0.7916977588672531 worst\n",
-    "\n",
-    "After running diffrent values, the reducuction of very common words doesn't make any changes. But performance improves for the SVM classifier removing tokens present in fewer that 3 documments and decreces for the Random Forest classifier.\n"
+    "After running diffrent values, the reducuction of very common words doesn't make any changes. But performance improves for the SVM classifier removing tokens present in fewer that 3 documments and decreces for the Random Forest classifier."
    ]
   },
   {
