--- a/PartTwo.ipynb
+++ b/PartTwo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 36,
    "id": "11ad6c29",
    "metadata": {},
    "outputs": [
@@ -11,7 +11,11 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package punkt to /Users/jimena/nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n"
+      "[nltk_data]   Package punkt is already up-to-date!\n",
+      "[nltk_data] Downloading package wordnet to /Users/jimena/nltk_data...\n",
+      "[nltk_data]   Package wordnet is already up-to-date!\n",
+      "[nltk_data] Downloading package omw-1.4 to /Users/jimena/nltk_data...\n",
+      "[nltk_data]   Package omw-1.4 is already up-to-date!\n"
      ]
     }
    ],
@@ -21,15 +25,19 @@
     "import spacy\n",
     "\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from sklearn.feature_extraction.text import CountVectorizer\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.svm import SVC\n",
     "from sklearn.metrics import f1_score, classification_report\n",
     "from nltk.tokenize import word_tokenize\n",
+    "from nltk.stem import WordNetLemmatizer\n",
     "from nltk.corpus import stopwords\n",
     "\n",
+    "\n",
     "nltk.download('punkt')\n",
+    "nltk.download('wordnet')\n",
+    "nltk.download('omw-1.4')\n",
+    "\n",
     "nlp = spacy.load(\"en_core_web_sm\")\n",
     "\n"
    ]
@@ -254,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 47,
    "id": "188a7768",
    "metadata": {},
    "outputs": [],
@@ -264,15 +272,17 @@
     "Print the classification report for the best performing classifier using your tokenizer.\"\"\"\n",
     "\n",
     "stop_words = set(stopwords.words('english'))\n",
+    "lemmatizer = WordNetLemmatizer()\n",
     "\n",
     "def custom_tokenizer_nltk(text):\n",
     "    tokens = word_tokenize(text)\n",
     "    clean_tokens = []\n",
     "    for token in tokens:\n",
-    "        if (token.isalpha() and\n",
-    "            token.lower() not in stop_words and\n",
-    "            len(token) > 2):\n",
-    "            clean_tokens.append(token.lower())\n",
+    "       token = token.lower()\n",
+    "       if token.isalpha() and token not in stop_words:\n",
+    "       #lemma = lemmatizer.lemmatize(token)\n",
+    "        if len(token) > 1:\n",
+    "           clean_tokens.append(token)\n",
     "    return clean_tokens\n",
     "        \n",
     "# text = \"Hello, world! This is a test\"\n",
@@ -281,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 38,
    "id": "a1872341",
    "metadata": {},
    "outputs": [
@@ -289,10 +299,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "63     [less, two, weeks, since, government, launched...\n",
+      "63     [less, two, week, since, government, launched,...\n",
       "99     [delighted, announce, last, friday, reached, a...\n",
       "100    [thank, secretary, state, advance, sight, stat...\n",
-      "101    [right, hon, lady, congratulations, securing, ...\n",
+      "101    [right, hon, lady, congratulation, securing, i...\n",
       "104    [congratulate, secretary, state, recognise, al...\n",
       "Name: speech, dtype: object\n"
      ]
