--- a/PartTwo.ipynb
+++ b/PartTwo.ipynb
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 49,
    "id": "188a7768",
    "metadata": {},
    "outputs": [],
@@ -280,9 +280,9 @@
     "    for token in tokens:\n",
     "       token = token.lower()\n",
     "       if token.isalpha() and token not in stop_words:\n",
-    "       #lemma = lemmatizer.lemmatize(token)\n",
+    "        lemma = lemmatizer.lemmatize(token)\n",
     "        if len(token) > 1:\n",
-    "           clean_tokens.append(token)\n",
+    "           clean_tokens.append(lemma)\n",
     "    return clean_tokens\n",
     "        \n",
     "# text = \"Hello, world! This is a test\"\n",
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "a1872341",
    "metadata": {},
    "outputs": [
@@ -313,7 +313,97 @@
     "\n",
     "tokenized_texts = texts.apply(custom_tokenizer_nltk)\n",
     "\n",
-    "print(tokenized_texts.head())"
+    "# print(tokenized_texts.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "adc184bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/jimena/.pyenv/versions/3.12.3/lib/python3.12/site-packages/sklearn/feature_extraction/text.py:517: UserWarning: The parameter 'token_pattern' will not be used since 'tokenizer' is not None'\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest classifier\n",
+      "f1 score: 0.5051579755563204\n",
+      "Classification report:\n",
+      "                         precision    recall  f1-score   support\n",
+      "\n",
+      "           Conservative       0.73      0.96      0.83       964\n",
+      "                 Labour       0.75      0.48      0.58       463\n",
+      "       Liberal Democrat       1.00      0.06      0.11        54\n",
+      "Scottish National Party       0.90      0.35      0.50       136\n",
+      "\n",
+      "               accuracy                           0.74      1617\n",
+      "              macro avg       0.85      0.46      0.51      1617\n",
+      "           weighted avg       0.76      0.74      0.71      1617\n",
+      "\n",
+      "SVM linear classifier\n",
+      "f1 score: 0.6252689802421786\n",
+      "Classification report:\n",
+      "                         precision    recall  f1-score   support\n",
+      "\n",
+      "           Conservative       0.83      0.93      0.87       964\n",
+      "                 Labour       0.74      0.70      0.72       463\n",
+      "       Liberal Democrat       0.89      0.15      0.25        54\n",
+      "Scottish National Party       0.80      0.55      0.65       136\n",
+      "\n",
+      "               accuracy                           0.80      1617\n",
+      "              macro avg       0.81      0.58      0.63      1617\n",
+      "           weighted avg       0.80      0.80      0.79      1617\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "vectorizer = TfidfVectorizer(\n",
+    "    tokenizer=custom_tokenizer_nltk, \n",
+    "    preprocessor=None, lowercase=False, stop_words=None, \n",
+    "    max_features=3000, ngram_range=(1, 3)\n",
+    "    )\n",
+    "\n",
+    "features = vectorizer.fit_transform(df['speech'])\n",
+    "labels = df[\"party\"]\n",
+    "\n",
+    "features_train, features_test, labels_train, labels_test = train_test_split(features, labels, test_size= 0.2, random_state= 26, stratify= labels)\n",
+    "\n",
+    "random_forest_and_linearsvm_performance(features_train, features_test, labels_train, labels_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "304b9cbc",
+   "metadata": {},
+   "source": [
+    "unigrams\n",
+    "Random Forest classifier\n",
+    "f1 score: 0.43523748230145454\n",
+    "SVM linear classifier\n",
+    "f1 score: 0.5899504098866261\n",
+    "bigrams\n",
+    "Random Forest classifier\n",
+    "f1 score: 0.4960422798007194\n",
+    "SVM linear classifier\n",
+    "f1 score: 0.6227610514154456\n",
+    "trigrams\n",
+    "Random Forest classifier\n",
+    "f1 score: 0.5051579755563204 \n",
+    "# down to 0.4900020900816393 if vectorizer token len >2 insted of >1 \n",
+    "# down to 0.4762973139164108 if not applying lemmatization to tokenizer \n",
+    "SVM linear classifier\n",
+    "f1 score: 0.6252689802421786\n",
+    "# down to 0.6095657098971895 if tokenizer len >2 insted of >1\n",
+    "# down to 0.5829744192780167 if not applying lemmatization to tokenizer"
    ]
   },
   {
