Added min doc frequency and tried values

--- a/PartTwo.ipynb
+++ b/PartTwo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "id": "11ad6c29",
    "metadata": {},
    "outputs": [
@@ -10,6 +10,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/Users/jimena/.local/lib/python3.12/site-packages/nltk/metrics/association.py:26: UserWarning: A NumPy version >=1.22.4 and <2.3.0 is required for this version of SciPy (detected version 2.3.1)\n",
+      "  from scipy.stats import fisher_exact\n",
       "[nltk_data] Downloading package punkt to /Users/jimena/nltk_data...\n",
       "[nltk_data]   Package punkt is already up-to-date!\n",
       "[nltk_data] Downloading package wordnet to /Users/jimena/nltk_data...\n",
@@ -44,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "531f9ad5",
    "metadata": {},
    "outputs": [
@@ -86,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "id": "a33040f6",
    "metadata": {},
    "outputs": [],
@@ -115,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "id": "9f63a418",
    "metadata": {},
    "outputs": [
@@ -195,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "id": "0082716d",
    "metadata": {},
    "outputs": [
@@ -262,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "id": "188a7768",
    "metadata": {},
    "outputs": [],
@@ -291,23 +293,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "a1872341",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "63     [less, two, week, since, government, launched,...\n",
-      "99     [delighted, announce, last, friday, reached, a...\n",
-      "100    [thank, secretary, state, advance, sight, stat...\n",
-      "101    [right, hon, lady, congratulation, securing, i...\n",
-      "104    [congratulate, secretary, state, recognise, al...\n",
-      "Name: speech, dtype: object\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "texts = df['speech']\n",
     "\n",
@@ -318,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 17,
    "id": "adc184bc",
    "metadata": {},
    "outputs": [
@@ -335,32 +324,32 @@
      "output_type": "stream",
      "text": [
       "Random Forest classifier\n",
-      "f1 score: 0.5051579755563204\n",
+      "f1 score: 0.48263671992623136\n",
       "Classification report:\n",
       "                         precision    recall  f1-score   support\n",
       "\n",
-      "           Conservative       0.73      0.96      0.83       964\n",
-      "                 Labour       0.75      0.48      0.58       463\n",
-      "       Liberal Democrat       1.00      0.06      0.11        54\n",
-      "Scottish National Party       0.90      0.35      0.50       136\n",
+      "           Conservative       0.74      0.98      0.84       964\n",
+      "                 Labour       0.77      0.48      0.59       463\n",
+      "       Liberal Democrat       1.00      0.02      0.04        54\n",
+      "Scottish National Party       0.88      0.32      0.46       136\n",
       "\n",
-      "               accuracy                           0.74      1617\n",
-      "              macro avg       0.85      0.46      0.51      1617\n",
-      "           weighted avg       0.76      0.74      0.71      1617\n",
+      "               accuracy                           0.75      1617\n",
+      "              macro avg       0.85      0.45      0.48      1617\n",
+      "           weighted avg       0.77      0.75      0.71      1617\n",
       "\n",
       "SVM linear classifier\n",
-      "f1 score: 0.6252689802421786\n",
+      "f1 score: 0.6267792919500319\n",
       "Classification report:\n",
       "                         precision    recall  f1-score   support\n",
       "\n",
-      "           Conservative       0.83      0.93      0.87       964\n",
-      "                 Labour       0.74      0.70      0.72       463\n",
+      "           Conservative       0.83      0.93      0.88       964\n",
+      "                 Labour       0.74      0.71      0.73       463\n",
       "       Liberal Democrat       0.89      0.15      0.25        54\n",
       "Scottish National Party       0.80      0.55      0.65       136\n",
       "\n",
-      "               accuracy                           0.80      1617\n",
-      "              macro avg       0.81      0.58      0.63      1617\n",
-      "           weighted avg       0.80      0.80      0.79      1617\n",
+      "               accuracy                           0.81      1617\n",
+      "              macro avg       0.82      0.58      0.63      1617\n",
+      "           weighted avg       0.81      0.81      0.79      1617\n",
       "\n"
      ]
     }
@@ -369,7 +358,7 @@
     "vectorizer = TfidfVectorizer(\n",
     "    tokenizer=custom_tokenizer_nltk, \n",
     "    preprocessor=None, lowercase=False, stop_words=None, \n",
-    "    max_features=3000, ngram_range=(1, 3)\n",
+    "    max_features=3000, ngram_range=(1, 3), min_df=3\n",
     "    )\n",
     "\n",
     "features = vectorizer.fit_transform(df['speech'])\n",
@@ -398,17 +387,21 @@
     "trigrams\n",
     "Random Forest classifier\n",
     "f1 score: 0.5051579755563204 \n",
-    "# down to 0.4900020900816393 if vectorizer token len >2 insted of >1 \n",
-    "# down to 0.4762973139164108 if not applying lemmatization to tokenizer \n",
+    "down to 0.4900020900816393 if vectorizer token len >2 insted of >1 \n",
+    "down to 0.4762973139164108 if not applying lemmatization to tokenizer \n",
     "SVM linear classifier\n",
     "f1 score: 0.6252689802421786\n",
-    "# down to 0.6095657098971895 if tokenizer len >2 insted of >1\n",
-    "# down to 0.5829744192780167 if not applying lemmatization to tokenizer"
+    "down to 0.6095657098971895 if tokenizer len >2 insted of >1\n",
+    "down to 0.5829744192780167 if not applying lemmatization to tokenizer\n",
+    "\n",
+    "min_df: improves SVM not RF\n",
+    "3 0.48263671992623136 worst\n",
+    "3 0.6267792919500319 best "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "id": "17e10f7f",
    "metadata": {},
    "outputs": [],
@@ -429,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "id": "5a8ea34a",
    "metadata": {},
    "outputs": [
